# magnetron

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Procfile  README.md  apko.yaml  biome.jsonc  components.json  image.k  kcl.mod  kubernetes.k  melange.yaml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/: release.yml
.github/workflows/: kcl-module.yaml  oci-image.yaml
src/: env.js
src/app/: layout.tsx  page.tsx
src/app/_components/: catalog-panel.tsx  episode-builder.tsx  hint-select.tsx  live-status.tsx  magnet-utils.ts  magnetron-app.tsx  settings-panel.tsx  tmdb-picker.tsx  types.ts
src/app/healthz/: route.ts
src/app/readyz/: route.ts
src/components/ui/: alert.tsx  button-group.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  input-group.tsx  input.tsx  popover.tsx  radio-group.tsx  select.tsx  separator.tsx  sheet.tsx  spinner.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/lib/: magnetron.ts
src/magnetron/: __init__.py  app.py
src/magnetron/static/: app.css  app.input.css
src/magnetron/templates/: base.html  index.html  settings.html
src/magnetron/templates/fragments/: notice.html  recent_submissions.html
src/magnetron/templates/macros/: forms.html
src/server/: magnetron.ts
src/server/api/: root.ts
src/server/api/routers/: magnetron.ts
src/styles/: globals.css
tests/: test_app.py
