[project]
name = "magnetron"
version = "0.1.0"
description = "Small internal web UI and API for sending magnet links to bitmagnet and qBittorrent."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "Amoenus" }
]
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[project.urls]
Homepage = "https://github.com/Amoenus/magnetron"
Repository = "https://github.com/Amoenus/magnetron"
Issues = "https://github.com/Amoenus/magnetron/issues"

[project.scripts]
magnetron = "magnetron.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
